--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>TX1 LITE REAL PRO v1.8.8 FINAL</title>
+  <title>TX1 👨🏽‍💻💹</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>TX1 LITE REAL PRO v1.8.8 FINAL</h1>
+    <h1>TX1 👨🏽‍💻💹</h1>
     <div class="painel-central">
       <div class="coluna-esquerda">
-        <p>Comando Atual: <span id="comando">ESPERAR</span></p>
+        <p>Comando Atual: <span id="comando" class="esperar">ESPERAR</span></p>
         <p>Score de Confiança: <span id="score">--%</span></p>
         <p>Próxima Leitura em: <span id="timer">60</span>s</p>
         <p>Última Análise: <span id="hora">--:--:--</span></p>
@@ -30,8 +29,8 @@
         <ul id="ultimos"></ul>
       </div>
     </div>
-    <iframe class="grafico" src="https://s.tradingview.com/widgetembed/?symbol=BINANCE:BTCUSDT&interval=1&theme=dark"
-      width="100%" height="260" frameborder="0"></iframe>
+    <iframe class="grafico" src="https://s.tradingview.com/widgetembed/?symbol=FX:EURUSD&interval=1&theme=dark"
+      width="100%" height="350" frameborder="0"></iframe>
   </div>
   <audio id="som-call" src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg" preload="auto"></audio>
   <audio id="som-put" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
